--- a/P4/style.css
+++ b/P4/style.css
@@ -60,9 +60,8 @@ figcaption {
 }
 
 img {
-    /*display: block;
-    margin: auto;*/
     height: 200px;
+    width: 280px;
     display: inline-block;
 }
 
