--- a/animentnu/src/css/master.css
+++ b/animentnu/src/css/master.css
@@ -295,7 +295,7 @@ li:active {
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.7);
-    display: none;
+    /*display: none;*/
     z-index: 9999;
 }
 
