--- a/animentnu/src/css/voting.css
+++ b/animentnu/src/css/voting.css
@@ -4,9 +4,10 @@
 
 .voting_container {
     padding: 0;
+    user-select: none;
 }
 
-.voting_container > li {
+.voting_item {
     width: 70%;
     margin: 5px auto;
     padding: 10px;
@@ -17,6 +18,10 @@
     cursor: move;
 }
 
-li:active {
-    opacity: 0.7;
+.voting_drag_indicator {
+    float: right;
+}
+
+.voting_item_dragged {
+    opacity: 0.8;
 }
